@@ -132,6 +132,15 @@ class Move(metaclass=PoolMeta):
         ], 'Exception State'), 'get_sale_exception_state')
 
     @classmethod
+    def __setup__(cls):
+        super().__setup__()
+        if not cls.origin.domain:
+            cls.origin.domain = {}
+        cls.origin.domain['sale.line'] = [
+            ('type', '=', 'line'),
+            ]
+
+    @classmethod
     def _get_origin(cls):
         models = super(Move, cls)._get_origin()
         models.append('sale.line')
