@@ -1,3 +1,4 @@
+* Permit only purchase line of type line as stock move origin
 
 Version 7.2.0 - 2024-04-29
 --------------------------
